<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background1"
    tools:context=".register.WelcomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sc_italic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/create_your_own_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_your_own_story"
        android:textColor="@color/design_default_color_surface"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/signindesign"
        android:backgroundTint="#026440"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/newHereTextView"
        app:strokeColor="#333333"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/signindesign"
        android:backgroundTint="#283593"
        android:text="@string/loginButton"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create_your_own_story"
        app:layout_constraintStart_toStartOf="@+id/create_your_own_story"
        app:layout_constraintTop_toBottomOf="@+id/create_your_own_story"
        app:strokeColor="#CCCCCC"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/newHereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/new_here"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_surface"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
