<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddArticleActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/edit_your_blog_here"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_back_32" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/blog_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/BlogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        app:counterEnabled="true"
        app:counterMaxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_blue"
            android:filterTouchesWhenObscured="false"
            android:fontFamily="@font/montserrat_semibold"
            android:forceHasOverlappingRendering="false"
            android:hint="@string/BlogTitle"
            android:includeFontPadding="false"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike_angular"
        android:text="@string/blog_description"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/BlogTitle"
        app:layout_constraintTop_toBottomOf="@+id/BlogTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/BlogDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/BlogTitle"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/edit_text_red"
            android:filterTouchesWhenObscured="false"
            android:fontFamily="sans-serif"
            android:forceHasOverlappingRendering="false"
            android:gravity="start|top"
            android:hint="@string/BlogDescription"
            android:includeFontPadding="false"
            android:padding="10dp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/UpdateBlog"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/readmorebutton_shape"
        android:backgroundTint="@color/material_dynamic_primary50"
        android:text="@string/update_blog"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/BlogDescription"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/BlogDescription"
        app:layout_constraintTop_toBottomOf="@+id/BlogDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>