<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_background"
    tools:context=".SignInAndRegistrationActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/signindesign"
        android:backgroundTint="#000080"
        android:text="@string/loginButton"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/create_your_own_story"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/create_your_own_story"
        app:layout_constraintTop_toBottomOf="@+id/create_your_own_story"
        app:layout_goneMarginTop="304dp"
        app:strokeColor="#CCCCCC"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/newHereTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="15dp"
        android:text="@string/new_here"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:layout_constraintVertical_bias="0.95" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginTop="428dp"
        android:background="@drawable/signindesign"
        android:backgroundTint="#026440"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/create_your_own_story"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/create_your_own_story"
        app:layout_constraintTop_toBottomOf="@+id/create_your_own_story"
        app:strokeColor="@color/material_dynamic_neutral70"
        app:strokeWidth="20dp" />

    <TextView
        android:id="@+id/create_your_own_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_your_own_story"
        android:textColor="@android:color/holo_green_light"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:autofillHints="EmailAddress"
        android:background="@drawable/signindesign"
        android:backgroundTint="@color/white"
        android:drawableStart="@mipmap/email_image"
        android:ems="12"
        android:fontFamily="@font/alike_angular"
        android:gravity="center"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/create_your_own_story"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/create_your_own_story"
        app:layout_constraintTop_toBottomOf="@+id/create_your_own_story" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Password"
        android:background="@drawable/signindesign"
        android:backgroundTint="@color/white"
        android:drawableStart="@mipmap/password_image"
        android:ems="12"
        android:fontFamily="@font/alike_angular"
        android:gravity="center"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:nestedScrollingEnabled="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/EmailAddress"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/EmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintBottom_toTopOf="@+id/register_name"
        app:layout_constraintEnd_toEndOf="@+id/create_your_own_story"
        app:layout_constraintStart_toStartOf="@+id/create_your_own_story"
        app:layout_constraintTop_toTopOf="@+id/EmailAddress">

        <ImageView
            android:id="@+id/regiser_user_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:src="@mipmap/profile_image" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:autofillHints="no"
        android:background="@drawable/register_field_shape"
        android:backgroundTint="@color/white"
        android:drawableStart="@mipmap/user_image"
        android:ems="10"
        android:fontFamily="@font/alike_angular"
        android:gravity="center|center_vertical"
        android:hint="@string/register_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_field_shape"
        android:backgroundTint="@color/white"
        android:drawableStart="@mipmap/password_image"
        android:ems="10"
        android:fontFamily="@font/alike_angular"
        android:gravity="center|center_vertical"
        android:hint="@string/register_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_field_shape"
        android:backgroundTint="@color/white"
        android:drawableStart="@mipmap/email_image"
        android:ems="10"
        android:fontFamily="@font/alike_angular"
        android:gravity="center|center_vertical"
        android:hint="@string/register_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />

</androidx.constraintlayout.widget.ConstraintLayout>