<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background1"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/alegreya_sc_italic"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/create_your_own_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/create_your_own_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_your_own_story"
        android:textColor="@android:color/holo_green_light"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:fontFamily="@font/aref_ruqaa_bold"
        android:text="@string/developed_by_n_shantanu"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/create_your_own_story"
        app:layout_constraintStart_toStartOf="@+id/create_your_own_story"
        app:layout_constraintTop_toBottomOf="@+id/create_your_own_story" />

</androidx.constraintlayout.widget.ConstraintLayout>
