<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="264dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:elevation="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/heading"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/montserrat_semibold"
                android:maxLines="2"
                android:text="@string/please_start_writing_better_git_commits"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView

                android:id="@+id/cardView3"
                android:layout_width="34dp"
                android:layout_height="34dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/userName"
                app:layout_constraintStart_toEndOf="@+id/heading"
                app:layout_constraintTop_toTopOf="@+id/userName">

                <ImageView
                    android:id="@+id/profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/profile_image" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/userName"
                android:layout_width="70dp"
                android:layout_height="44dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/new_blogger"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/cardView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_mediumitalic"
                android:text="@string/date"
                android:textColor="@color/dateColor"
                app:layout_constraintEnd_toEndOf="@+id/userName"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="@+id/userName"
                app:layout_constraintStart_toStartOf="@+id/heading"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <TextView
                android:id="@+id/post"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.03"
                android:lineHeight="22sp"
                android:maxLines="4"
                android:text="@string/textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/divider3"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <Button
                android:id="@+id/readMoreButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/readmorebutton_shape"
                android:backgroundTint="@color/material_dynamic_primary50"
                android:text="@string/read_more"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editbutton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post" />

            <Button
                android:id="@+id/editbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/readmorebutton_shape"
                android:backgroundTint="@color/black"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/readMoreButton"
                app:layout_constraintEnd_toStartOf="@+id/deletebutton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/readMoreButton"
                app:layout_constraintTop_toTopOf="@+id/readMoreButton" />

            <Button
                android:id="@+id/deletebutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/readmorebutton_shape"
                android:backgroundTint="@color/red"
                android:text="@string/delete"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/editbutton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/editbutton"
                app:layout_constraintTop_toTopOf="@+id/editbutton" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="heading" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="cardView3" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>